[metadata]
name = webrtc
version = 0.0.1

[options]
packages = find:
install_requires =
    setuptools

[options.entry_points]
# if you have python nodes, add console_scripts here
console_scripts = webrtc_server = webrtc.server:main

[data_files]
# Register package in ament index
share/ament_index/resource_index/packages = resource/webrtc
# Install package.xml
share/webrtc = package.xml
# Install your launch files (whole dir or single file)
share/webrtc/launch = launch
